--- a/summative/API/requirements.txt
+++ b/summative/API/requirements.txt
@@ -2,6 +2,8 @@ annotated-types==0.7.0
 anyio==4.6.2.post1
 click==8.1.7
 colorama==0.4.6
+dnspython==2.7.0
+email_validator==2.2.0
 fastapi==0.115.5
 h11==0.14.0
 idna==3.10
